docs/7.52/md/abenbit_func_abexa.md
---
title: "Bit function"
description: |
  This example demonstrates how bit-set works. Source Code REPORT demo_bit_set. CLASS demo DEFINITION. PUBLIC SECTION. CLASS-METHODS main. ENDCLASS. CLASS demo IMPLEMENTATION. METHOD main. DATA(number) = 1. cl_demo_input=>request( CHANGING field = number ). IF abs( number ) <= 200. cl_demo_outpu
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenbit_func_abexa.htm"
abapFile: "abenbit_func_abexa.htm"
keywords: ["select", "do", "if", "method", "class", "data", "abenbit", "func", "abexa"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Processing Internal Data](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_data_working.htm) →  [Character String and Byte String Processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_data_string.htm) →  [Expressions and Functions for Byte String Processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenbyte_processing_expr_func.htm) →  [Byte String Functions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenbinary_functions.htm) → 

Bit function

This example demonstrates how bit-set works.

Source Code

REPORT demo\_bit\_set.
CLASS demo DEFINITION.
  PUBLIC SECTION.
    CLASS-METHODS main.
ENDCLASS.
CLASS demo IMPLEMENTATION.
  METHOD main.
    DATA(number) = 1.
    cl\_demo\_input=>request( CHANGING field = number ).
    IF abs( number ) <= 200.
      cl\_demo\_output=>display( CONV xstring( bit-set( number ) ) ).
    ELSE.
      cl\_demo\_output=>display(
       'Number in Example must not exceed 200' ).
    ENDIF.  ENDMETHOD.
ENDCLASS.
START-OF-SELECTION.
  demo=>main( ).

Description

The output of the program shows how bits are set in a specified place in hexadecimal form.